# microtex_rs

./: .dockerignore  .gitignore  BUILDING.md  BUILDSTATUS.md  CHANGELOG.md  CHANGES_DPI_METADATA.md  COMPLETION_SUMMARY.txt  Cargo.toml  DOCKER.md  FONTS.md  MULTIPLATFORM_SETUP.md  PROJECT_SUMMARY.md  README.md  build.rs  docker-compose.yml  run_all_examples.sh
.github/workflows/: capture-bundle-macos-arm64.yml  ci.yml  docs.yml  release.yml
c++/: CMakeLists.txt
c++/lib/: CMakeLists.txt  microtex.cpp
c++/lib/atom/: atom_fence.cpp
c++/lib/box/: box_single.cpp
c++/lib/core/: parser.cpp
c++/lib/graphic/: graphic.h
c++/lib/macro/: macro.cpp  macro_colors.cpp  macro_colors.h
c++/lib/otf/: fontsense.h  otf.h
c++/lib/render/: render.cpp  render.h
c++/lib/unimath/: uni_font.cpp  uni_symbol.cpp
c++/lib/wrapper/: cwrapper.cpp  cwrapper.h  graphic_wrapper.cpp  graphic_wrapper.h
c++/mini_tests/: test_math_svg  test_math_svg.cpp  test_svg_vector  test_svg_vector.cpp
c++/platform/cairo/: CMakeLists.txt  graphic_cairo.cpp  graphic_cairo.h
c++/platform/gtk/: CMakeLists.txt
c++/test/: CMakeLists.txt
c++/test/example/gtkmm/: gtkmm_main.cpp
c++/test/lib/: microtex.h
c++/test/lib/atom/: atom_box.h  atom_row.cpp
c++/test/lib/core/: formula.cpp  parser.cpp  split.cpp
c++/test/lib/graphic/: graphic_basic.h
c++/test/lib/otf/: fontsense.cpp  otf.cpp
c++/test/lib/unimath/: uni_font.h
c++/test/lib/utils/: log.h
c++/test/platform/cairo/: CMakeLists.txt
coverage/: cobertura.xml
dependencies_bundle/macos/intel/: .CONTENTS  README.md
dependencies_bundle/macos/intel/include/: GL  evdns.h  event2  evutil.h  gcrypt.h  gettext-po.h  gmp.h  gmpxx.h  gpg-error.h  ksba.h  libintl.h  libpng16  libusb-1.0  lz4hc.h  lzma  lzma.h  nettle  pcre2.h  pcre2posix.h  pngconf.h  pnglibconf.h  textstyle.h  unbound-event.h  unicase.h  unictype.h  unilbrk.h  uniwbrk.h  uniwidth.h
dependencies_bundle/macos/intel/include/X11/: DECkeysym.h  HPkeysym.h  XKBlib.h  Xfuncs.h  Xlib-xcb.h  Xlibint.h  Xlocale.h  Xmd.h  Xpoll.h  Xproto.h  Xregion.h  Xresource.h  Xthreads.h  Xwinsock.h  keysym.h  keysymdef.h
dependencies_bundle/macos/intel/include/X11/dri/: xf86driproto.h  xf86dristr.h
dependencies_bundle/macos/intel/include/X11/extensions/: EVI.h  EVIproto.h  MITMisc.h  XI.h  XI2.h  XIproto.h  XKB.h  XKBgeom.h  XKBproto.h  XLbx.h  XResproto.h  XShm.h  XvMCproto.h  agproto.h  applewmconst.h  applewmproto.h  bigreqsproto.h  composite.h  cup.h  cupproto.h  damagewire.h  dbe.h  dbeproto.h  dpmsconst.h  lbx.h  lbxproto.h  mitmiscproto.h  multibuf.h  multibufconst.h  panoramiXproto.h  presentproto.h  randrproto.h  recordconst.h  recordstr.h  render.h  saverproto.h  secur.h  security.h  shapeproto.h  shm.h  (+14 more)
dependencies_bundle/macos/intel/include/X11/fonts/: font.h  fontstruct.h  fsmasks.h
dependencies_bundle/macos/intel/include/cairo/cairo/: cairo-features.h
dependencies_bundle/macos/intel/include/fuse/: fuse.h  fuse_common.h
dependencies_bundle/macos/intel/include/fuse3/: fuse.h  fuse_common.h  libfuse_config.h
dependencies_bundle/macos/intel/include/graphite2/: assuan.h  autosprintf.h  brotli  cairo  decimal.hh  event.h  evhttp.h  evrpc.h  fontconfig  freetype2  fribidi  gio-unix-2.0  glib-2.0  gnutls  gpgrt.h  graphite2  harfbuzz  idn2.h  libtasn1.h  lz4.h  lz4file.h  lz4frame.h  lz4frame_static.h  lzo  mpdecimal.h  nghttp2  npth.h  openssl  p11-kit-1  pango-1.0  pixman-1  pkgconf  png.h  textstyle  unbound.h  uniconv.h  unigbrk.h  unimetadata.h  uniname.h  uninorm.h  (+8 more)
dependencies_bundle/macos/intel/include/graphite2/X11/: ImUtil.h  Sunkeysym.h  X.h  XF86keysym.h  XWDFile.h  Xalloca.h  Xarch.h  Xatom.h  Xauth.h  Xcms.h  Xdefs.h  Xdmcp.h  Xfuncproto.h  Xlib.h  XlibConf.h  Xos.h  Xos_r.h  Xosdefs.h  Xprotostr.h  Xutil.h  Xw32defs.h  Xwindows.h  ap_keysym.h  cursorfont.h
dependencies_bundle/macos/intel/include/graphite2/fuse/: fuse_lowlevel.h
dependencies_bundle/macos/intel/include/graphite2/fuse3/: fuse_lowlevel.h
dependencies_bundle/macos/intel/include/graphite2/node/: config.gypi
dependencies_bundle/macos/intel/lib/: libASAF.dylib  libPMCABP.dylib  libX11-xcb.dylib  libX11.6.dylib  libXext.dylib  libXrender.1.dylib  libasprintf.0.dylib  libassuan.dylib  libbrotlicommon.1.dylib  libbrotlidec.1.dylib  libbrotlienc.1.dylib  libcairo-gobject.dylib  libcairo-script-interpreter.dylib  libcairo.dylib  libevent.dylib  libevent_core-2.1.7.dylib  libevent_extra-2.1.7.dylib  libevent_openssl-2.1.7.dylib  libevent_pthreads.dylib  libfontconfig.dylib  libfreetype.dylib  libfribidi.0.dylib  libfuse.dylib  libfuse3.dylib  libgcrypt.dylib  libgettextlib-0.26.dylib  libgettextpo.dylib  libgettextsrc-0.26.dylib  libgio-2.0.dylib  libgirepository-2.0.dylib  libglib-2.0.dylib  libgmodule-2.0.0.dylib  libgmp.dylib  libgmpxx.dylib  libgnutls-dane.0.dylib  libgnutls.dylib  libgnutlsxx.dylib  libgobject-2.0.dylib  libgpg-error.0.dylib  libgraphite2.3.2.1.dylib  (+63 more)
dependencies_bundle/macos/intel/lib/pkgconfig/: apr-1.pc  apr-util-1.pc  cairo-fc.pc  cairo-ft.pc  cairo-gobject.pc  cairo-pdf.pc  cairo-png.pc  cairo-ps.pc  cairo-quartz-font.pc  cairo-quartz-image.pc  cairo-quartz.pc  cairo-script-interpreter.pc  cairo-script.pc  cairo-svg.pc  cairo-tee.pc  cairo-xcb-shm.pc  cairo-xcb.pc  cairo-xlib-xrender.pc  cairo-xlib.pc  cairo.pc  fontconfig.pc  freetype2.pc  fribidi.pc  fuse.pc  fuse3.pc  gio-2.0.pc  gio-unix-2.0.pc  girepository-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gmpxx.pc  gnutls-dane.pc  gnutls.pc  gobject-2.0.pc  gpg-error.pc  graphite2.pc  gthread-2.0.pc  harfbuzz-cairo.pc  harfbuzz-gobject.pc  (+82 more)
doc_helper/: github-corner.html
docker/: Dockerfile.alpine  Dockerfile.ubuntu-lts  MULTIPLATFORM.md  README.md  SETUP_SUMMARY.sh  build-and-test.sh  buildx-test.sh  validate-multiplatform.sh  validate.sh
examples/: batch_render.rs  debug_fonts.rs  render_formulas.rs  render_to_file.rs  simple_formula.rs  test_dpi_visual.rs
scripts/: create_bundle_macos.sh
src/: lib.rs
tests/: integration_tests.rs  multiple_rendere_test.rs
(+62 files in other folders)
