[package]
name = "microtex_rs"
version = "0.1.0"
edition = "2021"
authors = ["Ronan Le Meillat - SCTG Development"]
description = "Rust bindings and CLI for MicroTeX (headless LaTeX -> SVG)"
license = "MIT OR Apache-2.0"
repository = "https:/github.com/sctg-development/microtex_rs"

[lib]
name = "microtex_rs"
crate-type = ["rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.17"
byteorder = "1"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }

[build-dependencies]
cmake = "0.1"
bindgen = "0.72.1"
sha2 = "0.10"
walkdir = "2"
num_cpus = "1"
reqwest = { version = "0.13.1", features = ["blocking", "http2"] }

[features]
# Vendoring removed from main branch. Use system libraries or dependency bundles.
# To experiment with the old vendored flow, see the `vendored` branch.
[dev-dependencies]
pretty_assertions = "1"
env_logger = "0.11"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.cargo-coverage]
# hint for coverage tools; tests try to reach 90%+ for the Rust-only code
coverage = 90
